--- a/client-web/src/App.css
+++ b/client-web/src/App.css
@@ -100,3 +100,29 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 300px;
+}
+
+ul {
+  width: 80%;
+  height: 100%;
+  list-style: none;
+  overflow-y: scroll;
+  border: black solid 1px;
+}
+
+.alert {
+  color: red;
+}
